# polebrowse

./: .gitignore  .npmrc  README.md  forge.config.js  install.bat  install.sh  obfuscate.js  package-lock.json  package.json  polebrowse.desktop
.github/workflows/: android.yml  build.yml  ci.yml  release.yml
browser/: Cargo.toml  build.rs
browser/src/: app.rs  client.rs  handler.rs  ipc.rs  main.rs  render.rs  ui.rs
browser/tests/: cef_basic_test.rs
installer/: index.html  install.js  main.js  package.json  preload.js
src/: app.js  index.html  main.js  preload.js  style.css  updater.js
src-android/: app.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
www/: index.html
