[package]
name = "polebrowse"
version = "2.0.0"
edition = "2021"
description = "PoleBrowse Desktop Browser - CEF build"

[[bin]]
name = "polebrowse"

[features]
default = []
sandbox = ["cef/sandbox"]

[dependencies]
cef = "148"

[build-dependencies]
cef = { version = "148", features = ["build-util"] }

[package.metadata.cef]
cef_version = "148"

[package.metadata.cef.bundle]
resources_path = "../www"
