[package]
name = "polebrowse"
version = "1.5.0"
edition = "2021"

[lib]
name = "polebrowse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies", "gzip", "brotli", "http2"], default-features = false }
tokio = { version = "1", features = ["full"] }
